Packages refactoring, cleanup of a few bits